# DataSQuirreL

./: .env  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.cjs  CHANGELOG.md  CONTRIBUTING.md  README.md  analyze_icon.cjs  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  process_icon.cjs  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml
public/: global.css  index.html
scripts/: bump-version.js
scripts/sql/: schema.sql  seed.sql
src/: App.svelte  main.js  main.js.map  main.ts  stores.js  stores.js.map  stores.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_menu.rs
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/icons_backup/: extension_icon.icns
src-tauri/src/: cache.rs  config.rs  constants.rs  database.rs  logging.rs  main.rs  menu.rs  sql_console_storage.rs  storage.rs
src-tauri/src/database/: db.rs  postgres_mapper.rs  query_generator.rs  types_mapper.rs
src-tauri/src/types/: api_objects.rs  db.rs  mod.rs
src/components/: AboutModal.svelte  CellEditor.svelte  CellEditor.test.ts  ConnectionForm.svelte  ConnectionForm.test.ts  ConsoleToolBar.svelte  DataTable.svelte  DataTable.test.ts  DataTablePaginationBar.svelte  DataTableToolBar.svelte  DataTableToolBar.test.ts  DateEditor.svelte  ExportModal.svelte  Loader.svelte  Loader.test.ts  MainTopBar.svelte  MainTopBar.test.ts  Notification.svelte  Notification.test.ts  QueryConsole.svelte  QueryPreviewModal.svelte  RecentProjects.svelte  RecentProjects.test.ts  RecursiveSidebarItem.svelte  RecursiveSidebarItem.test.ts  SideBarItem.svelte  SideBarItem.test.ts  Sidebar.svelte  Sidebar.test.ts  SidebarToolbar.svelte  SidebarToolbar.test.ts  TabBar.svelte  TabBar.test.ts  Tabs.svelte  Tabs.test.ts  WhereClauseEditor.svelte  WindowControls.svelte  WindowControls.test.ts  sidebar.svelte
src/components/__snapshots__/: ConnectionForm.test.ts.snap  DataTable.test.ts.snap  DataTableToolBar.test.ts.snap  Loader.test.ts.snap  MainTopBar.test.ts.snap  RecentProjects.test.ts.snap  RecursiveSidebarItem.test.ts.snap  SideBarItem.test.ts.snap  Sidebar.test.ts.snap  SidebarToolbar.test.ts.snap  TabBar.test.ts.snap  Tabs.test.ts.snap  WindowControls.test.ts.snap
src/constants/: constants.js  constants.js.map  constants.ts
src/lib/: HistoryManager.ts  TransactionManager.ts  cache.js  cache.js.map  cache.ts  postgresMapper.ts  router.js  router.js.map  router.ts  shortcuts.ts
src/lib/stores/: tabs.js  tabs.js.map  tabs.ts
src/routes/: InitConnection.svelte  InitScreen.svelte  InitScreen.test.ts  MainScreen.svelte  MainScreen.test.ts
src/routes/__snapshots__/: InitScreen.test.ts.snap  MainScreen.test.ts.snap
src/test/: setup.ts
src/types/: dbTypeMapper.ts  interface.d.ts  interface.ts  props.d.ts  response.d.ts  svg.d.ts
src/views/: InitConnection.svelte  MainScreen.svelte  initConnection.svelte  mainScreen.svelte
todos/: maintenance.todo
