[package]
name = "DataSquirrel"
version = "0.1.2"
description = "Database Viewer with modern sleek and elegant design"
authors = ["Ayan Banerje"]   
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.86"


#[tauri.bundle]
# identifier = "com.example.myapp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
sqlx = { version = "0.8", features = [ "runtime-async-std-native-tls", "postgres", "json", "chrono", "uuid" ] }
sqlx-core = "0.8"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-secret-service"] }
once_cell = "1.8"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = "0.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
