[package]
name = "DataSquirrel"
version = "0.2.0"
description = "Database Viewer with modern sleek and elegant design"
authors = ["Ayan Banerje"]   
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.86"


#[tauri.bundle]
# identifier = "com.example.myapp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2.7.0", features = [] }
tokio = "1.44.2"
sqlformat = "0.5.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-native-tls", "postgres", "json", "chrono", "uuid" ] }
zstd = "0.13.3"                                                        # ZSTD compression
lru = "0.16.0"  # In-memory LRU cache
sqlx-core = "0.8.6"
tauri-plugin-notification = "2.3.0"
tauri-plugin-dialog = "2.3.1"
tauri-plugin-shell = "2.3.0"
tauri-plugin-fs = "2.4.1"
tauri-plugin-os = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-http = "2.5.1"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }   
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
once_cell = "1.21.3"
dirs = "6.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
chrono = "0.4.41"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.0"
